--- a/.github/workflows/schedule-w-matrix.yml
+++ b/.github/workflows/schedule-w-matrix.yml
@@ -126,7 +126,7 @@ jobs:
             # (?<=type:).* = Use positive lookbehind to match a pattern ONLY if it is preceded by another pattern. So we want everything (.*) after "type"
             # -m1 = first match, -P = enable Perl-regex, -o = only return what the regex matches, not the whole line
             title_text=$(echo "$TEMPLATE" | grep -m1 -P -o '(?<=title: ).*' | tr -d '"')
-            echo "title_text = ${title_text}"
+            [[ "${{ github.event.inputs.verbose }}" == "true" ]] && echo "title_text = ${title_text}"
             
             description_text=$(echo "$TEMPLATE" | grep -m1 -P -o '(?<=description: ).*' | tr -d '"')
             echo "description_text = ${description_text}"
