--- a/.github/workflows/schedule-w-matrix.yml
+++ b/.github/workflows/schedule-w-matrix.yml
@@ -45,7 +45,8 @@ jobs:
         issue_template: ["schedule-generated-issue-template1.yml", "schedule-generated-issue-template2.yml", "do-not-use", "do-not-use-2"]
         # placeholder2: [1,2]
         exclude: 
-          - issue_template: ["do-not-use", "schedule-generated-issue-template2.yml"]
+          - issue_template: "do-not-use"
+          - issue_template: "schedule-generated-issue-template2.yml"
     steps:
       
       - name: Check out repository
