--- a/.github/workflows/schedule-w-matrix.yml
+++ b/.github/workflows/schedule-w-matrix.yml
@@ -34,6 +34,7 @@ jobs:
   create-sched-issue:
     runs-on: ubuntu-latest
     permissions:
+      issues: write
       pull-requests: write
       contents: write # ??? For issue template stuff. See https://docs.github.com/en/rest/issues/issues?apiVersion=2022-11-28#create-an-issue
     env:
