--- a/.github/workflows/schedule-w-matrix.yml
+++ b/.github/workflows/schedule-w-matrix.yml
@@ -173,8 +173,8 @@ jobs:
                 -H "X-GitHub-Api-Version: 2022-11-28" \
                 /repos/org-mushroom-kingdom/bash-git-script/issues \
                 --input - <<< '{
-                  "title": "$title_text",
-                  "type": "$type_text",
+                  "title": --raw-field "$title_text",
+                  "type": --raw-field "$type_text",
                   "labels": [
                     "$label_text"
                   ]
