--- a/.github/workflows/schedule-w-matrix.yml
+++ b/.github/workflows/schedule-w-matrix.yml
@@ -172,13 +172,8 @@ jobs:
                 -H "Accept: application/vnd.github+json" \
                 -H "X-GitHub-Api-Version: 2022-11-28" \
                 /repos/org-mushroom-kingdom/bash-git-script/issues \
-                --input - <<< '{
-                  "title": --raw-field "$title_text",
-                  "type": --raw-field "$type_text",
-                  "labels": [
-                    "$label_text"
-                  ]
-                }'
+                --raw-field "title=$title_text",
+                --raw-field "type=$type_text"
             fi
             
             # gh issue create --title "My new issue title" --body "Detailed description of the issue."
