--- a/.github/workflows/schedule-w-matrix.yml
+++ b/.github/workflows/schedule-w-matrix.yml
@@ -173,7 +173,8 @@ jobs:
                 -H "X-GitHub-Api-Version: 2022-11-28" \
                 /repos/org-mushroom-kingdom/bash-git-script/issues \
                 --raw-field "title=$title_text" \
-                --raw-field "type=$type_text"
+                --raw-field "body=$body_text" \
+                
             fi
             
             # gh issue create --title "My new issue title" --body "Detailed description of the issue."
